--- a/index.html
+++ b/index.html
@@ -1,25 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>A Colorful Website</title>
+  <title>A Crazy Experiment</title>
   <meta charset="utf-8" />
 </head>
 <body>
-  <h1 style="color: #07F">A Colorful Website</h1>
-  <p>This is a website about color!</p>    
-  
-  <h2 style="color: #C00">News</h2>
+  <h1>A Crazy Experiment</h1>
+  <p>Look! A Rainbow!</p>
+
   <ul>
-    <li>Nothing going on (yet)</li>
+    <li style="color: red">Red</li>
+    <li style="color: orange">Orange</li>
+    <li style="color: yellow">Yellow</li>
+    <li style="color: green">Green</li>
+    <li style="color: blue">Blue</li>
+    <li style="color: indigo">Indigo</li>
+    <li style="color: violet">Violet</li>
   </ul>
-  <h2>Navigation</h2>
-<ul>
-  <li style="color: #F90">
-    <a href="orange.html">The Orange Page</a>
-  </li>
-  <li style="color: #00F">
-    <a href="blue.html">The Blue Page</a>
-  </li>
-</ul>
+    
+  <p><a href="index.html">Return to home page</a></p>
 </body>
 </html>
