Add news item for rainbow

--- a/index.html
+++ b/index.html
@@ -18,7 +18,14 @@
     <li style="color: indigo">Indigo</li>
     <li style="color: violet">Violet</li>
   </ul>
-    
+  <h2 style="color: #C00">News</h2>
+  <ul>
+    <li><a href="news-1.html">Blue Is The New Hue</a></li>
+  </ul>
+  <h2 style="color: #C00">News</h2>
+  <ul>
+    <li><a href="rainbow.html">Our New Rainbow</a></li>
+  </ul>
   <p><a href="index.html">Return to home page</a></p>
 </body>
 </html>
