--- a/index.html
+++ b/index.html
@@ -19,13 +19,33 @@
     <li style="color: violet">Violet</li>
   </ul>
   <h2 style="color: #C00">News</h2>
-  <ul>
-    <li><a href="news-1.html">Blue Is The New Hue</a></li>
-  </ul>
   <h2 style="color: #C00">News</h2>
   <ul>
+    <li><a href="news-1.html">Blue Is The New Hue</a></li>
     <li><a href="rainbow.html">Our New Rainbow</a></li>
+    <li><a href="news-2.html">A Red Rebellion</a></li>
   </ul>
   <p><a href="index.html">Return to home page</a></p>
+  <h2>Navigation</h2>
+<ul>
+  <li>
+    <a href="about/index.html">About Us</a>
+  </li>
+  <li style="color: #F90">
+    <a href="orange.html">The Orange Page</a>
+  </li>
+  <li style="color: #00F">
+    <a href="blue.html">The Blue Page</a>
+  </li>
+  <li>
+    <a href="rainbow.html">The Rainbow Page</a>
+  </li>
+  <li style="color: #C00">
+    <a href="red.html">The Red Page</a>
+  </li>
+  <li style="color: #FF0">
+    <a href="yellow.html">The Yellow Page</a>
+  </li>
+</ul>
 </body>
 </html>
